--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 # Site settings
-title: *folio
-email: you@example.com
+title: Anand's blog/portfolio
+email: vedabrat@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   A simple, whitespace, helvetica based portfolio theme.
 baseurl:  # the subpath of your site, e.g. /blog/
 url:  # the base hostname & protocol for your site
-twitter_username: twitter_username
-github_username:  github_username
+twitter_username: vedabrat
+github_username:  vedabrat
 
 # Build settings
 markdown: kramdown
@@ -23,7 +23,5 @@ collections:
     output: true
     permalink: /portfolio/:path/
   poetry:
-    output: true
+    output: false
     permalink: /poetry/:path/
-
-
