--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ email: vedabrat@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   A simple, whitespace, helvetica based portfolio theme.
 baseurl:  # the subpath of your site, e.g. /blog/
-url:  # the base hostname & protocol for your site
+url: "http://vedabrat.github.io"
 twitter_username: vedabrat
 github_username:  vedabrat
 
