--- a/_config.yml
+++ b/_config.yml
@@ -23,5 +23,5 @@ collections:
     output: true
     permalink: /portfolio/:path/
   poetry:
-    output: false
+    output: true
     permalink: /poetry/:path/
